--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Student Results Portal</h1>
+        <h1>Student hello Results Portal</h1>
         <div class="search-box">
             <input type="text" id="studentNo" placeholder="Enter Student Roll Number">
             <button onclick="searchStudent()">Search</button>
